--- a/MenuApplication/app/src/main/AndroidManifest.xml
+++ b/MenuApplication/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Adapters.Image"></activity>
+        <activity android:name=".Adapters.ImageAct"></activity>
     </application>
 
 </manifest>
