--- a/CameraApplication/app/src/main/AndroidManifest.xml
+++ b/CameraApplication/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.a71.cameraapplication">
+    package="com.example.a71.cameraapplication"
+    android:sharedUserId="com.example.sharedUserid">
     <uses-permission android:name="android.permission.CAMERA"/>
+    <permission android:name="camera.permision"
+        android:protectionLevel="normal"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
