--- a/HttpApplication2/app/src/main/AndroidManifest.xml
+++ b/HttpApplication2/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.a68.httpapplication">
+    package="com.example.a68.httpapplication"
+    android:sharedUserId="com.example.sharedUserid">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.INTERNET" />
