--- a/IntentAplication/app/src/main/AndroidManifest.xml
+++ b/IntentAplication/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.a71.intentaplication">
+    package="com.example.a71.intentaplication"
+    android:sharedUserId="com.example.sharedUserid">
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="camera.permision" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
