--- a/HttpApplication2/app/src/main/AndroidManifest.xml
+++ b/HttpApplication2/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.a68.httpapplication"
-    android:sharedUserId="com.example.sharedUserid">
+    package="com.example.a68.httpapplication">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,7 +11,8 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
+    <permission android:name="com.example.read"
+        android:protectionLevel="normal"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -60,7 +60,7 @@
         android:authorities="com.example.a68.httpapplication.MyContentProvide"
         android:readPermission="com.example.read"
         android:enabled="true"
-        android:exported="false"
+        android:exported="true"
         />
     </application>
 
